{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 634,
  "lineage": "775fa625-17c0-3396-a08d-316374de6506",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0987282e817c2bd1e",
            "association_id": "eipassoc-008d0f69769a4b8bc",
            "domain": "vpc",
            "id": "eipalloc-0987282e817c2bd1e",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0abee35b8232b9fa3",
            "private_dns": "ip-10-0-0-92.us-west-2.compute.internal",
            "private_ip": "10.0.0.92",
            "public_dns": "ec2-44-227-201-94.us-west-2.compute.amazonaws.com",
            "public_ip": "44.227.201.94",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Managed-By": "Terraform",
              "Name": "ACS-EIP-dev",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "tags_all": {
              "Managed-By": "Terraform",
              "Name": "ACS-EIP-dev",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:internet-gateway/igw-0fa2a5ffd7138ccf1",
            "id": "igw-0fa2a5ffd7138ccf1",
            "owner_id": "839942615319",
            "tags": {
              "Managed-By": "Terraform",
              "Name": "ACS-vpc-0699ea0bd0ec1eefa-IG!",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "tags_all": {
              "Managed-By": "Terraform",
              "Name": "ACS-vpc-0699ea0bd0ec1eefa-IG!",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:loadbalancer/app/ext-alb/8ede13f1cc136eb3",
            "arn_suffix": "app/ext-alb/8ede13f1cc136eb3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ext-alb-88370476.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:loadbalancer/app/ext-alb/8ede13f1cc136eb3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ext-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e0855345f2ad370c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0407545f5bd07c874"
              },
              {
                "subnet_id": "subnet-054af131a01e1e6ba"
              }
            ],
            "subnets": [
              "subnet-0407545f5bd07c874",
              "subnet-054af131a01e1e6ba"
            ],
            "tags": {
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "tags_all": {
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "vpc_id": "vpc-0699ea0bd0ec1eefa",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:loadbalancer/app/ialb/89def4721ec78920",
            "arn_suffix": "app/ialb/89def4721ec78920",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ialb-2052496003.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:loadbalancer/app/ialb/89def4721ec78920",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e573ec684a7a67f8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-007955dc12dbb7c7a"
              },
              {
                "subnet_id": "subnet-0d65a7c6c95910781"
              }
            ],
            "subnets": [
              "subnet-007955dc12dbb7c7a",
              "subnet-0d65a7c6c95910781"
            ],
            "tags": {
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "tags_all": {
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "vpc_id": "vpc-0699ea0bd0ec1eefa",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:listener/app/ext-alb/8ede13f1cc136eb3/b427800cf8ff35a9",
            "certificate_arn": "arn:aws:acm:us-west-2:839942615319:certificate/76219253-d00b-4b44-ab97-ae204c886cde",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/nginx-tgt/6bbfe23f7c243982",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:listener/app/ext-alb/8ede13f1cc136eb3/b427800cf8ff35a9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:loadbalancer/app/ext-alb/8ede13f1cc136eb3",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.michaeloajala",
            "aws_acm_certificate_validation.michaeloajala",
            "aws_lb.ext-alb",
            "aws_lb_target_group.nginx-tgt",
            "aws_route53_record.michaeloajala",
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.michaeloajala"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:listener/app/ialb/89def4721ec78920/7fed8c18877396e4",
            "certificate_arn": "arn:aws:acm:us-west-2:839942615319:certificate/76219253-d00b-4b44-ab97-ae204c886cde",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/wordpress-tgt/8e4546026e5589be",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:listener/app/ialb/89def4721ec78920/7fed8c18877396e4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:loadbalancer/app/ialb/89def4721ec78920",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.michaeloajala",
            "aws_acm_certificate_validation.michaeloajala",
            "aws_lb.ialb",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.michaeloajala",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.michaeloajala"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/michael-tooling-tgt/bb7bdfcabdffe5b9",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:listener-rule/app/ialb/89def4721ec78920/7fed8c18877396e4/0f52a7263f8a2322",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.michaeloajala.tk"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:listener-rule/app/ialb/89def4721ec78920/7fed8c18877396e4/0f52a7263f8a2322",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:listener/app/ialb/89def4721ec78920/7fed8c18877396e4",
            "priority": 99,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.michaeloajala",
            "aws_acm_certificate_validation.michaeloajala",
            "aws_lb.ialb",
            "aws_lb_listener.web-listener",
            "aws_lb_target_group.tooling-tgt",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.michaeloajala",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.michaeloajala"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/nginx-tgt/6bbfe23f7c243982",
            "arn_suffix": "targetgroup/nginx-tgt/6bbfe23f7c243982",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/nginx-tgt/6bbfe23f7c243982",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/michael-tooling-tgt/bb7bdfcabdffe5b9",
            "arn_suffix": "targetgroup/michael-tooling-tgt/bb7bdfcabdffe5b9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/michael-tooling-tgt/bb7bdfcabdffe5b9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "michael-tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/wordpress-tgt/8e4546026e5589be",
            "arn_suffix": "targetgroup/wordpress-tgt/8e4546026e5589be",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:839942615319:targetgroup/wordpress-tgt/8e4546026e5589be",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0987282e817c2bd1e",
            "connectivity_type": "public",
            "id": "nat-0173e5a640833099e",
            "network_interface_id": "eni-0abee35b8232b9fa3",
            "private_ip": "10.0.0.92",
            "public_ip": "44.227.201.94",
            "subnet_id": "subnet-0407545f5bd07c874",
            "tags": {
              "Managed-By": "Terraform",
              "Name": "ACS-NAT-dev",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "tags_all": {
              "Managed-By": "Terraform",
              "Name": "ACS-NAT-dev",
              "Owner-Email": "mickelmicho6991@gmail.com"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04eea0239b1922d511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0173e5a640833099e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04eea0239b1922d51",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.nat",
            "aws_route_table.private-rtb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-rtb-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fa2a5ffd7138ccf1",
            "id": "r-rtb-08566251a45ffe2701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08566251a45ffe270",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public-rtb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:route-table/rtb-04eea0239b1922d51",
            "id": "rtb-04eea0239b1922d51",
            "owner_id": "839942615319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0173e5a640833099e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Managed-By": "Terraform",
              "Name": "ACS-PRIVATE-ROUTE-TABLE-dev",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "tags_all": {
              "Managed-By": "Terraform",
              "Name": "ACS-PRIVATE-ROUTE-TABLE-dev",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:route-table/rtb-08566251a45ffe270",
            "id": "rtb-08566251a45ffe270",
            "owner_id": "839942615319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa2a5ffd7138ccf1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Managed-By": "Terraform",
              "Name": "ACS-PUBLIC-ROUTE-TABLE-dev",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "tags_all": {
              "Managed-By": "Terraform",
              "Name": "ACS-PUBLIC-ROUTE-TABLE-dev",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2912e027f1e5b51",
            "route_table_id": "rtb-04eea0239b1922d51",
            "subnet_id": "subnet-007955dc12dbb7c7a"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d8f30008ddefc66",
            "route_table_id": "rtb-04eea0239b1922d51",
            "subnet_id": "subnet-0d65a7c6c95910781"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0202f1f839163bd8e",
            "route_table_id": "rtb-04eea0239b1922d51",
            "subnet_id": "subnet-0888def4ed0a49624"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ff0ff9698322cc1",
            "route_table_id": "rtb-04eea0239b1922d51",
            "subnet_id": "subnet-07dc0da3924985a65"
          },
          "dependencies": [
            "aws_route_table.private-rtb",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a749df71e1beb1e",
            "route_table_id": "rtb-08566251a45ffe270",
            "subnet_id": "subnet-0407545f5bd07c874"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065d277f0cccc8e45",
            "route_table_id": "rtb-08566251a45ffe270",
            "subnet_id": "subnet-054af131a01e1e6ba"
          },
          "dependencies": [
            "aws_route_table.public-rtb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:security-group/sg-0d83c590450650924",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d83c590450650924",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "839942615319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "BASTION-SG"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "BASTION-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:security-group/sg-0bc5b0d4c36626152",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bc5b0d4c36626152",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0002c6717e456de29"
                ],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0002c6717e456de29",
                  "sg-0d83c590450650924"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "839942615319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DATALAYER-SG"
            },
            "tags_all": {
              "Name": "DATALAYER-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:security-group/sg-0e0855345f2ad370c",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0855345f2ad370c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "839942615319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EXT-ALB-SG"
            },
            "tags_all": {
              "Name": "EXT-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:security-group/sg-0e573ec684a7a67f8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e573ec684a7a67f8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0decaa9d061f1ab44"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "int-alb-sg",
            "name_prefix": "",
            "owner_id": "839942615319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "INT-ALB-SG"
            },
            "tags_all": {
              "Name": "INT-ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:security-group/sg-0decaa9d061f1ab44",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0decaa9d061f1ab44",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d83c590450650924"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e0855345f2ad370c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e0855345f2ad370c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "839942615319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "NGINX-SG"
            },
            "tags_all": {
              "Name": "NGINX-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:security-group/sg-0002c6717e456de29",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0002c6717e456de29",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d83c590450650924"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e573ec684a7a67f8"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "839942615319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "WEBSERVER-SG"
            },
            "tags_all": {
              "Name": "WEBSERVER-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-1498986186",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0decaa9d061f1ab44",
            "security_group_rule_id": "sgr-01f957541f46967f7",
            "self": false,
            "source_security_group_id": "sg-0d83c590450650924",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-4025191107",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e573ec684a7a67f8",
            "security_group_rule_id": "sgr-0384ba4795266168d",
            "self": false,
            "source_security_group_id": "sg-0decaa9d061f1ab44",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-1202456844",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc5b0d4c36626152",
            "security_group_rule_id": "sgr-0590086790a6b3b2b",
            "self": false,
            "source_security_group_id": "sg-0d83c590450650924",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 3306,
            "id": "sgrule-757669434",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc5b0d4c36626152",
            "security_group_rule_id": "sgr-02d8924fc1da5c134",
            "self": false,
            "source_security_group_id": "sg-0002c6717e456de29",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 2049,
            "id": "sgrule-3203370672",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bc5b0d4c36626152",
            "security_group_rule_id": "sgr-085937cc7f56700fc",
            "self": false,
            "source_security_group_id": "sg-0002c6717e456de29",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http-80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 80,
            "id": "sgrule-2541844793",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0decaa9d061f1ab44",
            "security_group_rule_id": "sgr-002a2f35393f5d593",
            "self": false,
            "source_security_group_id": "sg-0e0855345f2ad370c",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-1975078602",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0decaa9d061f1ab44",
            "security_group_rule_id": "sgr-0b59fc1aa4a95d1d4",
            "self": false,
            "source_security_group_id": "sg-0e0855345f2ad370c",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-webserver-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 443,
            "id": "sgrule-2551253568",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0002c6717e456de29",
            "security_group_rule_id": "sgr-0935b1ab3cfb94b44",
            "self": false,
            "source_security_group_id": "sg-0e573ec684a7a67f8",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-webserver-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 22,
            "id": "sgrule-9365541",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0002c6717e456de29",
            "security_group_rule_id": "sgr-04e578599fc27ff1f",
            "self": false,
            "source_security_group_id": "sg-0d83c590450650924",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:subnet/subnet-007955dc12dbb7c7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007955dc12dbb7c7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839942615319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-0",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "tags_all": {
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-0",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:subnet/subnet-0d65a7c6c95910781",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d65a7c6c95910781",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839942615319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-1",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "tags_all": {
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-1",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:subnet/subnet-0888def4ed0a49624",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0888def4ed0a49624",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839942615319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-2",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "tags_all": {
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-2",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:subnet/subnet-07dc0da3924985a65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07dc0da3924985a65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839942615319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-3",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "tags_all": {
              "Managed-By": "Terraform",
              "Name": "ACS-PrivateSubnet-3",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:subnet/subnet-0407545f5bd07c874",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0407545f5bd07c874",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839942615319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-0",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "tags_all": {
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-0",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:subnet/subnet-054af131a01e1e6ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054af131a01e1e6ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "839942615319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-1",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "tags_all": {
              "Managed-By": "Terraform",
              "Name": "ACS-PublicSubnet-1",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "vpc_id": "vpc-0699ea0bd0ec1eefa"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:839942615319:vpc/vpc-0699ea0bd0ec1eefa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08d942c2d5b55669a",
            "default_route_table_id": "rtb-05d6811b0e8150f80",
            "default_security_group_id": "sg-022a3696e65512928",
            "dhcp_options_id": "dopt-0b5192682c76c8a49",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0699ea0bd0ec1eefa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05d6811b0e8150f80",
            "owner_id": "839942615319",
            "tags": {
              "Managed-By": "Terraform",
              "Name": "ACS-VPC",
              "Owner-Email": "mickelmicho6991@gmail.com"
            },
            "tags_all": {
              "Managed-By": "Terraform",
              "Name": "ACS-VPC",
              "Owner-Email": "mickelmicho6991@gmail.com"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}